# huobi_Cpp

./: .gitignore  CHANGE_LOG.md  CMakeLists.txt  CentosDockerfile  Dockerfile  Makefile  README.md  cmake_install.cmake  config.h  config.h.in  getOpensslVersion.sh  huobiConfig.h.in  huobi_cpp_my.files  huobi_cpp_my.includes  idle.sh
demo/: CMakeLists.txt
demo/account/: CMakeLists.txt  accountdemo.cpp
demo/algo/: CMakeLists.txt  algodemo.cpp
demo/crossmargin/: CMakeLists.txt  crossmargindemo.cpp
demo/isolatedmargin/: CMakeLists.txt  isolatedmargindemo.cpp
demo/market/: CMakeLists.txt  marketdemo.cpp
demo/reference/: CMakeLists.txt  referencedemo.cpp
demo/subuser/: CMakeLists.txt  subuserdemo.cpp
demo/trade/: CMakeLists.txt  tradedemo.cpp
demo/wallet/: CMakeLists.txt  walletdemo.cpp
demo/websocketAsset/: CMakeLists.txt  websocketAssetdemo.cpp
demo/websocketMarket/: CMakeLists.txt  websocketMarketdemo.cpp
demo/websocketOrders/: CMakeLists.txt  websocketOrdersdemo.cpp
docker/: Dockerfile
docker/centos/: Dockerfile
docker/ubuntu/: Dockerfile
examples/: cpp_signature_demo.md  key.h
examples/BatchCancelOrders/: CMakeLists.txt  main.cpp
examples/BatchOrders/: CMakeLists.txt  main.cpp
examples/CrossMarginExamples/: CMakeLists.txt  main.cpp
examples/Get24HTradeStatistics/: CMakeLists.txt  main.cpp
examples/GetCandlestickData/: CMakeLists.txt  GetCandlestickData.cpp
examples/GetExchangeInfo/: CMakeLists.txt  main.cpp
examples/GetFeeRate/: CMakeLists.txt  main.cpp
examples/GetHistoricalTrade/: CMakeLists.txt  main.cpp
examples/GetOrderHistory/: CMakeLists.txt  main.cpp
examples/GetPriceDepth/: CMakeLists.txt  main.cpp
examples/NewExamples/: CMakeLists.txt  main.cpp
examples/OrderV2example/: CMakeLists.txt  main.cpp
examples/PlaceOrder/: CMakeLists.txt  main.cpp
examples/Request24HTradeStatistics/: CMakeLists.txt  main.cpp
examples/RequestAccountList/: CMakeLists.txt  main.cpp
examples/RequestCandlestickEvent/: CMakeLists.txt  main.cpp
examples/RequestMarketDepthMBPEvent/: CMakeLists.txt  main.cpp
examples/RequestOrdertDetailEvent/: CMakeLists.txt  main.cpp
examples/RequestOrdertListEvent/: CMakeLists.txt  main.cpp
examples/RequestPriceDepthEvent/: CMakeLists.txt  main.cpp
examples/RequestTradeEvent/: CMakeLists.txt  main.cpp
examples/SubUserManage/: CMakeLists.txt  main.cpp
examples/Subscribe24HTradeStatistics/: CMakeLists.txt  main.cpp
examples/SubscribeAccountChange/: CMakeLists.txt  main.cpp
examples/SubscribeAccountUpdateEvent/: CMakeLists.txt  main.cpp
examples/SubscribeCandlestickEvent/: CMakeLists.txt  main.cpp
examples/SubscribeMarketBBOEvent/: CMakeLists.txt  main.cpp
examples/SubscribeMarketDepthMBP/: CMakeLists.txt  main.cpp
examples/SubscribeOrderUpdate/: CMakeLists.txt  main.cpp
examples/SubscribePriceDepth/: CMakeLists.txt  main.cpp
examples/SubscribeTradeClearingEvent/: CMakeLists.txt  main.cpp
examples/TransferFutures/: CMakeLists.txt  main.cpp
examples/exampleVersion13/: CMakeLists.txt  main.cpp
include/: define.h  gzDecompress.h  include.h  restful.h  signature.h
include/Huobi/: Account.h  AccountChange.h  AccountEvent.h  AccountHistory.h  AccountHistoryRequest.h  AccountLedger.h  AccountLedgerRequest.h  AccountListEvent.h  AccountUpdateEvent.h  AggrTradeEvent.h  Balance.h  BatchCancelOrdersResult.h  BatchCancelResult.h  BatchOrderResult.h  BestQuote.h  CancelOpenOrderRequest.h  Candlestick.h  CandlestickEvent.h  CandlestickRequest.h  Chain.h  CompleteSubAccountInfo.h  CrossMaginGetLoanBalanceRequest.h  CrossMarginAccount.h  CrossMarginApplyLoanRequest.h  CrossMarginLoadOrder.h  CrossMarginLoanInfo.h  CrossMarginLoanOrdersRequest.h  CrossMarginRepayLoanRequest.h  CrossMarginTransferRequest.h  CurrencyChain.h  CurrencyChainsRequest.h  Decimal.h  Deposit.h  DepositAddress.h  DepositAddressRequest.h  DepositRecordRequest.h  DepthEntry.h  Enums.h  EtfSwapConfig.h  EtfSwapHistory.h  (+55 more)
include/client/: WebsocketTradeClient.h  accountClient.h  algoClient.h  crossMarginClient.h  isolatedMarginClient.h  marketClient.h  referenceClient.h  subUserClient.h  tradeClient.h  walletClient.h  websocketAssetClient.h  websocketHelper.h  websocketMarketClient.h  websocketOrdersClient.h
include/rapidjson/: document.h  memorybuffer.h  pointer.h  reader.h  schema.h  stringbuffer.h  writer.h
src/: AccountsInfoMap.cpp  AccountsInfoMap.h  ClientCreator.cpp  Enums.cpp  EtfResult.h  GetHost.h  HuobiApiException.cpp  InputChecker.cpp  InputChecker.h  Logger.cpp  RestApi.h  RestApiImpl.cpp  RestApiImpl.h  RestApiInvoke.h  SubscriptionClientImpl.cpp  SubscriptionClientImpl.h  SyncClientImpl.cpp  SyncClientImpl.h  TimeService.h  User.h  WebSocketApiImpl.cpp  WebSocketApiImpl.h  WebSocketConnection.cpp  WebSocketConnection.h  WebSocketRequest.h  WebSocketWatchDog.cpp  WebSocketWatchDog.h  WsRequestClientImpl.cpp  WsRequestClientImpl.h  restful.cpp  signature.cpp  websocketHelper.cpp
src/Utils/: ApiSignature.h  ChannelParser.h  Channels.h  JsonDocument.cpp  JsonDocument.h  JsonWrapper.cpp  JsonWrapper.h  JsonWriter.h  Singleton.h  UrlParamsBuilder.h  base64.cpp  base64.h  gzip.cpp  (+7 more)
unittest/: CMakeLists.txt  MockWebsocketConnecttion.h  TestApplyLoan.h  TestCancelOpenOrders.h  TestCancelOrder.h  TestCancelWithdraw.h  TestCreateOrder.h  TestDecimal.h  TestErrorResponse.h  TestEtfSwap.h  TestGet24HTradeStatistics.h  TestGetAccount.h  TestGetBalance.h  TestGetBestQuote.h  TestGetCandlestick.h  TestGetCurrencies.h  TestGetCurrentUserAllAccounts.h  TestGetDepositHistory.h  TestGetETFCandlestick.h  TestGetEtfSwapConfig.h  TestGetEtfSwapHistory.h  TestGetExchangeTimestamp.h  TestGetFeeRate.h  TestGetHistoricalTrade.h  TestGetHistoryOrders.h  TestGetLoanHistory.h  TestGetMarginBalanceDetail.h  TestGetMarketTrade.h  TestGetMatchResult.h  TestGetMatchResults.h  TestGetOrderByClientOrderId.h  TestGetOrderHistory.h  TestGetPriceDepth.h  TestGetSymbols.h  TestGetWithdrawHistory.h  TestRepayLoan.h  TestRequest24HTradeStatistics.h  TestRequestAccountList.h  TestRequestCandlestickEvent.h  TestRequestOrdertDetailEvent.h  (+18 more)
(+135 files in other folders)
